# fe2

./: .gitignore  Cargo.toml  init.evcxr  prelude.rs
fe621/: .jupyter_ystore.db  Cargo.toml  assn1.ipynb  assn3.ipynb  assn3.tex  data.ipynb  data.py  historical_data.csv  options.csv  options_data.csv  part2.ipynb  part3.ipynb  prob2.html  pyproject.toml  sample_data25.csv
fe621/.ipynb_checkpoints/: data-checkpoint.ipynb  part3-checkpoint.ipynb
fe621/data/: calls_2025-05-08.csv  calls_2025-05-09.csv  calls_2025-05-12.csv  calls_2025-05-13.csv  calls_2025-05-14.csv  calls_2025-05-15.csv  calls_2025-05-16.csv  calls_2025-05-23.csv  calls_2025-05-30.csv  calls_2025-06-06.csv  puts_2025-05-08.csv  puts_2025-05-09.csv  puts_2025-05-12.csv  puts_2025-05-13.csv  puts_2025-05-14.csv  puts_2025-05-15.csv  puts_2025-05-16.csv  puts_2025-05-23.csv  puts_2025-05-30.csv  puts_2025-06-06.csv
fe621/src/: lib.rs  main.rs  yahoo_test.rs
fe621/src/assn1/: mod.rs  part2.rs  part3.rs
fe621/src/assn2/: prob1.rs  prob2.rs
fe621/src/assn3/: prob1.rs  prob2.rs
fe621/src/assn4/: prob1.rs  prob2.Rmd  prob3.rs
fe621/src/assn5/: prob1.rs  prob2.rs
fe621/src/fe621.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fe630/: Cargo.toml  FE630_Intro.ipynb  assn1.ipynb  assn1.tex  assn1_3.ipynb  assn1_3.tex  assn1_experiment.ipynb  main.py  pyproject.toml
fe630/data/: midterm.csv
fe630/src/: lib.rs  main.rs  midterm.rs
fe630/src/assn1/: prob1.rs
fe630/src/assn2/: FE630HW2RMD.Rmd  assn2.ipynb  assn2.tex  mod.rs  prob1.rs  prob3.rs
fe635/: Cargo.toml
fe635/src/: lib.rs
fe635/src/assn5/: mod.rs  prob1.rs
fe680/: Cargo.toml  FE680_LMM.ipynb  README.md  _rustfmt.toml  _rustfmt_bak.toml  assn1.ipynb  assn1.tex  assn2.ipynb  credit_10_pdf.txt  credit_1_pdf.txt  credit_2_pdf.txt  credit_3_pdf.txt  credit_4_pdf.txt  credit_5_pdf.txt  credit_6_pdf.txt  credit_7_pdf.txt  credit_8_pdf.txt  credit_9_pdf.txt  main.py  pyproject.toml  rustfmt_jupyter.py
fe680/src/: hw.rs  lib.rs  main.rs  util.rs
fe680/src/assn1/: mod.rs  prob1.rs  prob2.rs  prob3.rs
fe680/src/assn2/: mod.rs  prob1.rs  prob2.rs  prob3.rs  prob4.rs  prob5.rs
fe680/src/assn3/: mod.rs  prob1.rs  prob2.rs  prob3.rs  prob4.rs
fe680/src/assn4/: prob1.rs  prob2.rs  prob3.rs
fe680/src/assn5/: biv.rs  mod.rs  prob1.rs  scratch.Rmd
fe680/src/fin/: mod.rs  prob1.rs  prob2.rs  prob3.rs  prob4.rs  prob5.rs  prob6.rs
