[package]
name = "fe621"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
yahoo_finance_api = "3.0.0"
polars = { version = "0.46", features = [ "lazy", "cum_agg", "list_arithmetic", "round_series", "abs", "strings", "dtype-full" ] }
plotly = "0.12.1"
statrs = "0.18.0"
rayon = "1.10.0"
anyhow = "1.0.95"
serde_json = "1.0.138"
jiff = "0.2.1"
nalgebra = { version = "0.33.2", features = ["rayon"] }
itertools = "0.14.0"
plotters = "0.3.7"
chrono = "0.4.40"
rand = "0.9.0"
rand_distr = "0.5.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
regex = "1.11.1"
burn = { version = "0.17.0", features = ["train", "wgpu"] }
burn-dataset = { version = "0.17.0", features = ["dataframe"] }
serde = { version = "1.0.219", features = ["derive"] }
