[project]
name = "fe630"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxopt>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "numpy>=2.2.3",
    "polars>=1.24.0",
    "scipy>=1.15.2",
    "yfinance>=0.2.54",
]
