[package]
name = "fe680"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { workspace = true }
cubic_spline = { workspace = true }
nalgebra = "0.33"
plotters = { version = "0.3", features = ["evcxr", "all_series"] }
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["nalgebra_latest", "vec"] }
itertools = "0.14.0"
png = "0.17.16"
base64 = "0.22.1"
image = { version = "0.25.5", features = ["png"] }
statrs = "0.18.0"

