[package]
name = "fe680"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.46", features = [ "lazy", "cum_agg", "list_arithmetic", "round_series", "abs", "strings", "dtype-full", "log", "range" ] }
nalgebra = { version = "0.33", features = ["rayon"] }
plotters = { version = "0.3", features = ["evcxr", "all_series"] }
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["nalgebra_latest", "vec"] }
itertools = "0.14.0"
png = "0.17.16"
base64 = "0.22.1"
image = { version = "0.25.5", features = ["png"] }
statrs = "0.18.0"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"

